# VisionBridge

./: .gitignore  MULTI_DATASET_TRAINING_README.md  README.md  dataset.dvc  pyproject.toml  slurm.sh  visionbridge.def
.dvc/: config
.dvc/tmp/: lock
kotlin/: Main.kt  README.md  build.gradle.kts  build_and_run.py  run.sh  settings.gradle.kts  setup_and_run.sh  simple_run.sh  test_minimal.sh
kotlin/utils/: AIDoorDescriptor.kt  DoorDetectionFunctions.kt  SoundFunctions.kt  SpeechDetector.kt  door_detection_functions.kt
runs/multi_dataset/: args.yaml
src/: config.py
src/runs/detect/: .gitignore  multi_dataset.dvc  multi_dataset_degree30.dvc
src/runs/detect/multi_dataset/: args.yaml  results.csv
src/runs/detect/multi_dataset2/: args.yaml  results.csv
src/runs/detect/multi_dataset3/: args.yaml
src/runs/detect/multi_dataset_degree30/: args.yaml  results.csv
src/runs/detect/multi_dataset_new/: args.yaml  results.csv
src/scripts/: DoorDetectViewer.py  DoorDetectionTrainer.py  DoorDetectionTrainerv7.py  YoloFineTuning.py  advanced_door_detection.py  advanced_door_detection_deprecated.py  datasetToYoloDataset.py  export_model.py  fiftyoneviewer.py  generate_directional_sound.py  head_orientation.py  live_detection.py  live_door_detection.py  main.py  merge_datasets.py  multi_dataset.yaml  predictions.py  test_exported_model.py
src/scripts/runs/detect/: .gitignore
src/scripts/runs/detect/multi_dataset/: args.yaml  results.csv
src/utils/: AI_door_descriptor.py  door_detection_functions.py  llm_assistants.py  sound_functions.py  speech_detector.py
(+8 files in other folders)
