[project]
name = "visionbridge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ai-edge-litert>=2.0.2",
    "dvc>=3.63.0",
    "dvc-s3>=3.2.2",
    "fiftyone>=1.7.2",
    "numpy>=2.3.2",
    "onnx>=1.19.0",
    "onnx-graphsurgeon>=0.5.8",
    "onnx2tf>=1.28.2",
    "onnxruntime>=1.22.1",
    "onnxslim>=0.1.69",
    "opencv-python>=4.11.0.86",
    "sng4onnx>=1.0.4",
    "tensorflow>=2.20.0",
    "tf-keras>=2.20.1",
    "ultralytics>=8.3.189",
]
